--- a/CameraSlidersUC/CSUC.xaml
+++ b/CameraSlidersUC/CSUC.xaml
@@ -53,7 +53,7 @@
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Slider TickFrequency="17" IsSnapToTickEnabled="True" Name="MC1_Foc_Sl" Maximum="255" Minimum="0" Height="30" Width="250" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Label Name="MC1_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <!--<CheckBox Name="MC1_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Unchecked="MC1_Foc_CB_Unchecked" Checked="MC1_Foc_CB_Checked"/>-->
+                        <CheckBox Name="MC1_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Unchecked="MC1_Foc_CB_Unchecked" Checked="MC1_Foc_CB_Checked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -103,7 +103,7 @@
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Slider TickFrequency="17" IsSnapToTickEnabled="True" Name="RC_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="255" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Label Name="RC_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <!--<CheckBox Name="RC_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="RC_Foc_CB_Checked" Unchecked="RC_Foc_CB_Unchecked"/>-->
+                        <CheckBox Name="RC_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="RC_Foc_CB_Checked" Unchecked="RC_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -153,7 +153,7 @@
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Slider TickFrequency="17" IsSnapToTickEnabled="True" Name="MC3_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="255" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Label Name="MC3_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <!--<CheckBox Name="MC3_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC3_Foc_CB_Checked" Unchecked="MC3_Foc_CB_Unchecked"/>-->
+                        <CheckBox Name="MC3_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC3_Foc_CB_Checked" Unchecked="MC3_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -203,7 +203,7 @@
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Slider TickFrequency="17" IsSnapToTickEnabled="True" Name="MC4_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="255" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
                         <Label Name="MC4_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <!--<CheckBox Name="MC4_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC4_Foc_CB_Checked" Unchecked="MC4_Foc_CB_Unchecked"/>-->
+                        <CheckBox Name="MC4_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC4_Foc_CB_Checked" Unchecked="MC4_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
