--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -17,7 +17,7 @@
         <IMU:Gimbal Name="spinningstuff" IMU:Gimbal.TopicName="/imu/data" Width="200" Height="200" Margin="83,70,1615,772" />
         <!-- BEGIN status blocks -->
         <TextBlock Height="auto" Width="auto" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,0" Name="LinkTextBlock" Text="Controller Link Status Text Block"  TextAlignment="Center" VerticalAlignment="Top"/>
-        <Label Name="Arm_Engaged" Content="Arm NOT Engaged" Foreground="Red" FontSize="22" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Height="auto" Width="auto"/>
+        <Label Background="Black" Name="Arm_Engaged" Content="Arm NOT Engaged" Foreground="Red" FontSize="22" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Height="auto" Width="auto"/>
         <!-- END status blocks -->
 
         <!-- BEGIN main camera windows -->
