--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -9,9 +9,7 @@
         xmlns:TimerStopwatchUC="clr-namespace:TimerStopwatchUC;assembly=TimerStopwatchUC"
         xmlns:rock="clr-namespace:RockCounterUC;assembly=RockCounterUC"
         xmlns:uber="clr-namespace:UberSlider;assembly=UberSlider"
-        xmlns:CameraSlidersUC="clr-namespace:CameraSlidersUC;assembly=CameraSlidersUC"
-        xmlns:TiltSliderUC="clr-namespace:TiltSliderUC;assembly=TiltSliderUC"
-        xmlns:MotorGraph="clr-namespace:MotorBarGraph;assembly=MotorBarGraph"
+        xmlns:CameraSlidersUC="clr-namespace:CameraSlidersUC;assembly=CameraSlidersUC"                
         Background="DarkGray" Height="1080" Icon="Icon.png" Left="0" Loaded="Window_Loaded" Name="Window1" Title="MainWindow" Top="0" Width="1920" WindowState="Maximized" WindowStyle="SingleBorderWindow" >
     <Grid>
         <IMU:Gimbal Name="spinningstuff" IMU:Gimbal.TopicName="/imu/data" Width="200" Height="200" Margin="83,70,1615,772" />
@@ -67,20 +65,19 @@
         
         <Canvas>
             <Button Width="500" Height="300" Name="Raise_mast" FontSize="32" Content="Raise Mast" Click="Raise_Mast_Click" Canvas.Left="695" Canvas.Top="196"></Button>
-            <uber:VerticalUberSlider Name="_trans" Height="236" Canvas.Left="1539" Canvas.Top="465" uber:VerticalUberSlider.Label="Linear    Max Vel" uber:VerticalUberSlider.Max="3.0" uber:VerticalUberSlider.Min="0.0" uber:VerticalUberSlider.Value="0.5" Width="48" />
-            <uber:UberSlider Name="_rot" Width="232" Canvas.Left="1440" Canvas.Top="714" uber:UberSlider.Label="Angular Max Vel" uber:UberSlider.Max="3.14" uber:UberSlider.Min="0.0" uber:UberSlider.Value="0.5" />
-            <EStopUC:UserControl1 Name="EStop" Visibility="Visible" Width="150" Height="150" Canvas.Left="1688" Canvas.Top="749" />
-            <EStopUC:UserControl1 Name="EStop2" Visibility="Visible" Width="150" Height="150" Canvas.Left="1788" Canvas.Top="749" />
+            <uber:VerticalUberSlider Name="_trans" Height="236" Canvas.Left="1539" Canvas.Top="465" uber:VerticalUberSlider.Label="Linear    Max Vel" uber:VerticalUberSlider.Max="5.0" uber:VerticalUberSlider.Min="0.0" uber:VerticalUberSlider.Value="0.5" Width="48" />
+            <uber:UberSlider Name="_rot" Width="232" Canvas.Left="1440" Canvas.Top="714" uber:UberSlider.Label="Angular Max Vel" uber:UberSlider.Max="6.28" uber:UberSlider.Min="0.0" uber:UberSlider.Value="0.5" />
+            <EStopUC:UserControl1 Name="EStop" Visibility="Visible" Width="150" Height="150" Canvas.Left="1738" Canvas.Top="749" />
             <BattVoltUC:BattVolt Name="battvolt" Visibility="Visible" Width="200" Height="125" Canvas.Left="1688" Canvas.Top="908" />
             <rock:RockCounter Name="rockCounter" Canvas.Left="1404" Canvas.Top="791" />
             <CameraSlidersUC:CSUC x:Name="MainCameraSlider" Visibility="Visible" Canvas.Left="36" Canvas.Top="384" Width="414" />
-        <!--    <MotorGraph:MotorGraph Name="MotorGraph" Visibility="Visible" Canvas.Left="1551" Canvas.Top="109" Width="283" />-->
+            <!--<MotorGraph:MotorGraph Name="MotorGraph" Visibility="Visible" Canvas.Left="1551" Canvas.Top="109" Width="283" />-->
            <!-- <StackPanel Visibility="Visible" Background="WhiteSmoke" Canvas.Left="333" Canvas.Top="75">
                 <TextBox Background="Gainsboro" HorizontalAlignment="Center">Recalibration</TextBox>
                 <RadioButton GroupName="Colors" Content="Blue" Checked="RadioButton_Checked_B" />
                 <RadioButton GroupName="Colors" Content="Green" Checked="RadioButton_Checked_G" />
                 <RadioButton GroupName="Colors" Content="Red" Checked="RadioButton_Checked_R" />
-                <RadioButton GroupName="Colors" Content="Orange" Checked="RadioButton_Checked_O" />
+                <RadioButton GroupName="Colors" Content="Orange" Checked="RadioButton_Checked_O" />x
                 <RadioButton GroupName="Colors" Content="Purple" Checked="RadioButton_Checked_P" />
                 <RadioButton GroupName="Colors" Content="Yellow" Checked="RadioButton_Checked_Y" />
                 <Button Click="Button_Click_Send">Send Selection</Button>
