--- a/MotorBarGraph/MotorGraphUC.xaml
+++ b/MotorBarGraph/MotorGraphUC.xaml
@@ -3,28 +3,67 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Loaded="UserControl_Loaded"
              d:DesignHeight="320" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20*" />
-            <RowDefinition Height="280" />
+            <RowDefinition Height="120*" />
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="120*" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*" />
-            <ColumnDefinition Width="250" />     
-        </Grid.ColumnDefinitions>
-        <Rectangle Fill="LightBlue" Grid.Column="1" Grid.Row="1" Height="280" HorizontalAlignment="Left" Name="rectangle1" Stroke="Black" VerticalAlignment="Bottom" Width="62" />
-        <Rectangle Fill="LightBlue" Grid.Column="1" Grid.Row="1" Height="280" HorizontalAlignment="Left" Name="rectangle2" Stroke="Black" VerticalAlignment="Bottom" Width="62" Margin="62,0,0,0" />
-        <Rectangle Fill="LightBlue" Grid.Column="1" Grid.Row="1" Height="280" HorizontalAlignment="Left" Name="rectangle3" Stroke="Black" VerticalAlignment="Bottom" Width="62" Margin="124,0,0,0" />
-        <Rectangle Fill="LightBlue" Grid.Column="1" Grid.Row="1" Height="280" HorizontalAlignment="Left" Name="rectangle4" Stroke="Black" VerticalAlignment="Bottom" Width="62" Margin="186,0,0,0" />
-        
-        
-        
-        <TextBlock Grid.Column="1" Height="22" HorizontalAlignment="Left" Margin="58,10,0,0" Name="tb" Text="Motor Info" VerticalAlignment="Top" Width="118" TextAlignment="Center" />
-        <TextBlock Grid.Column="1" Grid.Row="1" Height="21" HorizontalAlignment="Left" Margin="6,132,0,0" Name="textBlock1" Text="0" VerticalAlignment="Top" Width="50" FontWeight="Bold" TextAlignment="Center" />
-        <TextBlock Height="21" HorizontalAlignment="Left" Margin="68,132,0,0" Name="textBlock2" Text="0" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontWeight="Bold" />
-        <TextBlock Height="21" HorizontalAlignment="Left" Margin="129,131,0,0" Name="textBlock3" Text="0" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontWeight="Bold" />
-        <TextBlock Height="21" HorizontalAlignment="Left" Margin="193,132,0,0" Name="textBlock4" Text="0" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontWeight="Bold" />
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="2" />
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Canvas Name="container" Background="LightBlue" Grid.Column="1" Grid.RowSpan="3"/>
+            <Canvas Background="LightBlue" Grid.Column="3" Grid.RowSpan="3"/>
+            <Grid Background="Black" Grid.Column="1" Grid.Row="1" />
+            <Grid Background="Black" Grid.Column="3" Grid.Row="1" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="1" HorizontalAlignment="Stretch" StrokeThickness="0" Name="rectangle1" VerticalAlignment="Bottom" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="1" Grid.Row="3" StrokeThickness="0" HorizontalAlignment="Stretch" Name="rectangle1neg" VerticalAlignment="Top" />
+            <TextBlock Grid.Column="1" HorizontalAlignment="Center" Name="textBlock1" Text="0" VerticalAlignment="Center" FontWeight="Bold" TextAlignment="Center" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="3" HorizontalAlignment="Stretch" StrokeThickness="0" Name="rectangle2" VerticalAlignment="Bottom" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="3" Grid.Row="3" StrokeThickness="0" HorizontalAlignment="Stretch" Name="rectangle2neg" VerticalAlignment="Top" />
+            <TextBlock Grid.Column="3" HorizontalAlignment="Center" Name="textBlock2" Text="0" VerticalAlignment="Center" FontWeight="Bold" TextAlignment="Center" />
+        </Grid>
+
+        <Grid Grid.Row="3" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="2"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            
+            <Canvas Background="LightBlue" Grid.Column="1" Grid.RowSpan="3"/>
+            <Canvas Background="LightBlue" Grid.Column="3" Grid.RowSpan="3"/>
+            <Grid Background="Black" Grid.Column="1" Grid.Row="1" />
+            <Grid Background="Black" Grid.Column="3" Grid.Row="1" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="1" HorizontalAlignment="Stretch" StrokeThickness="0" Name="rectangle3" VerticalAlignment="Bottom" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="1" Grid.Row="2" StrokeThickness="0" HorizontalAlignment="Stretch" Name="rectangle3neg" VerticalAlignment="Top" />
+            <TextBlock Grid.Column="1" HorizontalAlignment="Center" Name="textBlock3" Text="0" VerticalAlignment="Center" FontWeight="Bold" TextAlignment="Center" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="3" HorizontalAlignment="Stretch" StrokeThickness="0" Name="rectangle4" VerticalAlignment="Bottom" />
+            <Rectangle Height="30" Fill="Yellow" Grid.Column="3" Grid.Row="2" StrokeThickness="0" HorizontalAlignment="Stretch" Name="rectangle4neg" VerticalAlignment="Top" />
+            <TextBlock Grid.Column="3" HorizontalAlignment="Center" Name="textBlock4" Text="0" VerticalAlignment="Center" FontWeight="Bold" TextAlignment="Center" />
+        </Grid>
+
+        <TextBlock Grid.Column="1" Name="tb" Text="Juice-o-meter" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Padding="0"/>
     </Grid>
 </UserControl>
