--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -11,8 +11,12 @@
         xmlns:uber="clr-namespace:UberSlider;assembly=UberSlider"
         xmlns:CameraSlidersUC="clr-namespace:CameraSlidersUC;assembly=CameraSlidersUC"
         xmlns:MotorGraph="clr-namespace:MotorBarGraph;assembly=MotorBarGraph"
-        Background="DarkGray" Height="1080" Icon="Icon.png" Left="0" Loaded="Window_Loaded" Name="Window1" Title="MainWindow" Top="0" Width="1920" WindowState="Maximized" WindowStyle="SingleBorderWindow" >
-    <Grid>
+        WindowState="Maximized" WindowStyle="SingleBorderWindow" Background="DarkGray" Height="1080" Icon="Icon.png" Left="0" Loaded="Window_Loaded"
+        Name="Window1" Title="MainWindow" Top="0" Width="1920"  >
+
+    <!--Background="#60A0A0A0" AllowsTransparency="True" WindowStyle="None"-->    
+
+        <Grid Background="Transparent">
         <IMU:Gimbal Name="spinningstuff" IMU:Gimbal.TopicName="/imu/data" Width="200" Height="200" Margin="83,70,1615,772" />
         <!-- BEGIN status blocks -->
         <TextBlock Height="auto" Width="auto" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,0" Name="LinkTextBlock" Text="Controller Link Status Text Block"  TextAlignment="Center" VerticalAlignment="Top"/>
