--- a/ROS_ImageUtils/SlaveImage.xaml
+++ b/ROS_ImageUtils/SlaveImage.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="ROS_ImageWPF.CompressedImageControl"
+﻿<UserControl x:Class="ROS_ImageWPF.SlaveImage"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"             
                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                      mc:Ignorable="d" 
                      d:DesignHeight="300" d:DesignWidth="300"
                       Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
     <Grid SnapsToDevicePixels="True">
-        <Rectangle SnapsToDevicePixels="True" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
+        <Rectangle SnapsToDevicePixels="True" Stretch="Fill" RenderTransformOrigin="0.5,0.5" >
             <Rectangle.RenderTransform>
                 <ScaleTransform ScaleX="-1"></ScaleTransform>
             </Rectangle.RenderTransform>
