Hide exclusively informative user controls (from within them) until their relevant subscribers receive a message.
Also, invert the flow of the rosout list.

--- a/MotorBarGraph/MotorGraphUC.xaml
+++ b/MotorBarGraph/MotorGraphUC.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Loaded="UserControl_Loaded"
              d:DesignHeight="320" d:DesignWidth="300">
-    <Grid>
+    <Grid Name="abraCadabra" Visibility="Hidden">
         <Grid.RowDefinitions>
             <RowDefinition Height="20*" />
             <RowDefinition Height="120*" />
