SRVs: simple client and server functional, but NOT pretty... yet.

--- a/ServiceTest/MainWindow.xaml
+++ b/ServiceTest/MainWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        
+        <Label Content="Label" Height="auto" HorizontalAlignment="Stretch" FontSize="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Name="math" VerticalAlignment="Stretch" />
     </Grid>
 </Window>
