--- a/ServiceClientTest/App.xaml
+++ b/ServiceClientTest/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="ServiceTest.App"
+﻿<Application x:Class="ServiceClientTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
