--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="CompressedImageView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
