--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="CompressedImageView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
+        xmlns:RosImageWpf="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageWPF"
+
         Title="MainWindow" Loaded="Window_Loaded">
     <Grid>
-        <c:CompressedImageControl x:FieldModifier="public" c:CompressedImageControl.TopicName="/camera/rgb/image_color/compressed" x:Name="TestImage" Width="640" Height="480"></c:CompressedImageControl>
+        <RosImageWpf:CompressedImageControl x:FieldModifier="public" RosImageWpf:CompressedImageControl.TopicName="/camera/rgb/image_color/compressed" x:Name="TestImage" Width="640" Height="480"></RosImageWpf:CompressedImageControl>
     </Grid>
 </Window>
