--- a/ROS_ImageUtils/CompressedImageControl.xaml
+++ b/ROS_ImageUtils/CompressedImageControl.xaml
@@ -1,25 +1,16 @@
 ﻿<UserControl x:Class="ROS_ImageWPF.CompressedImageControl"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                     mc:Ignorable="d" 
-                     d:DesignHeight="300" d:DesignWidth="300"
-                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
+             xmlns:ros="clr-namespace:ROS_ImageWPF"
+                     mc:Ignorable="d" Loaded="UserControl_Loaded" SizeChanged="UserControl_SizeChanged" >
     <Grid SnapsToDevicePixels="True">
-        <Rectangle SnapsToDevicePixels="True" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
-            <Rectangle.RenderTransform>
-                <ScaleTransform ScaleX="-1"></ScaleTransform>
-            </Rectangle.RenderTransform>
-            <Rectangle.Fill>
-                <ImageBrush x:Name="image" />
-            </Rectangle.Fill>
-        </Rectangle>
+        <ros:GenericImage x:Name="guts" />
         <Canvas Name="ROI_Container" RenderTransformOrigin="0.5,0.5" >
             <Canvas.RenderTransform>
                 <ScaleTransform ScaleY="-1"></ScaleTransform>
             </Canvas.RenderTransform>
         </Canvas>
-        <Label Name="fps" VerticalAlignment="Top" HorizontalAlignment="Right" Opacity="0.5" Background="Black" Foreground="Yellow" Padding="3" FontSize="20" FontWeight="DemiBold">FPS</Label>
     </Grid>
 </UserControl>
