--- a/ROS_ImageUtils/ImageControl.xaml
+++ b/ROS_ImageUtils/ImageControl.xaml
@@ -1,12 +1,9 @@
 ﻿<UserControl x:Class="ROS_ImageWPF.ImageControl"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:RosImageWpf="clr-namespace:ROS_ImageWPF" 
                       Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
   <Grid SnapsToDevicePixels="True">
-    <Rectangle SnapsToDevicePixels="True" Stretch="Fill">
-      <Rectangle.Fill>
-        <ImageBrush x:Name="image" />
-      </Rectangle.Fill>
-    </Rectangle>
-  </Grid>
+        <RosImageWpf:GenericImage x:Name="guts" />
+    </Grid>
 </UserControl>
