--- a/ROS_ImageUtils/MapControl.xaml
+++ b/ROS_ImageUtils/MapControl.xaml
@@ -1,17 +1,9 @@
 ﻿<UserControl x:Class="ROS_ImageWPF.MapControl"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
-  <Grid SnapsToDevicePixels="True" >      
-        <Rectangle SnapsToDevicePixels="True"  SizeChanged="Rectangle_SizeChanged" Name="DamnNearKilledHim"> 
-            <!-- Stretch="Fill" -->            
-      <Rectangle.Fill>
-                <ImageBrush x:Name="image" >
-                    <!--<ImageBrush.Transform>
-                        <ScaleTransorm ScaleY="-1" x:Name="flipper" />
-                    </ImageBrush.Transform>-->
-                </ImageBrush>
-            </Rectangle.Fill>
-    </Rectangle>
-  </Grid>
+                      xmlns:RosImageWpf="clr-namespace:ROS_ImageWPF"
+                      SnapsToDevicePixels="True">
+    <Grid SnapsToDevicePixels="True" >
+        <RosImageWpf:GenericImage x:Name="guts" />
+    </Grid>
 </UserControl>
